<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".KonversiSuhu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/konversi_bersuhu"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        />

    <EditText
        android:id="@+id/edt_celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="Celcius"
        android:lines="1" />

    <Button
        android:id="@+id/btn_bsuhu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cek_hasil"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/hasils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil_farenheit"
        android:hint="hasil suhu farenheit"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hasil_akhir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil_reamur"
        android:hint="hasil suhu reamur"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/akhir_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil_kelvin"
        android:hint="hasil suhu kelvin"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>