<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/aplikasi_mobile_sederhana"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"

        />

    <Button
        android:id="@+id/btn_dolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/konversi_dolar"
        />

    <Button
        android:id="@+id/btn_suhu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/konversi_suhu"
        />



</LinearLayout>